--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bower": "^1.7.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "mkdir public/uploads && cd public && bower install",
     "start": "node server.js"
   },
   "author": "Hunsin",
