--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "bower": "^1.7.7",
+    "bower": "^1.7.9",
     "express": "^4.13.4",
+    "firebase": "^2.4.2",
     "multer": "^1.1.0",
+    "vulcanize": "^1.14.8",
     "webshot": "^0.18.0"
-  },
-  "devDependencies": {
-    "bower": "^1.7.7",
-    "vulcanize": "^1.14.8"
   },
   "scripts": {
     "build": "mkdir public/uploads && cd public && bower install",
