--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
     "firebase-element": "GoogleWebComponents/firebase-element#^1.0.12",
     "iron-elements": "PolymerElements/iron-elements#^1.0.8",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
-    "hammerjs": "~2.0.6"
+    "hammerjs": "~2.0.6",
+    "app-route": "PolymerElements/app-route#^0.9.2"
   }
 }
