--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "elasticsearch": "^11.0.1",
     "express": "^4.13.4",
     "firebase": "^3.0.4",
+    "gm": "^1.22.0",
     "multer": "^1.1.0",
     "vulcanize": "^1.14.8"
   },
   "scripts": {
     "build": "mkdir public/uploads && cd public && bower install",
-    "elastic": "cd elasticsearch-2.3.4/bin && ./elasticsearch",
+    "elastic": "elasticsearch-2.3.4/bin/elasticsearch -d",
     "getelastic": "wget https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/2.3.4/elasticsearch-2.3.4.tar.gz && tar zxvf elasticsearch-2.3.4.tar.gz",
     "vulcanize": "vulcanize --inline-scripts --inline-css --strip-comments public/elements-list.html > public/elements.html",
     "start": "node server.js"
